--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     },
     "sourceMap": true,
     "target": "es6",
-    "types": ["node"],
+    "types": ["node", "express"],
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/@types/express"
