DynamoDB environment variables

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@ AWS_KEY=
 AWS_SECRET=
 AWS_ACCOUNT_ID=
 AWS_REGION_CODE=us-east-1
+AWS_API_VERSION=2012-08-10
+
+AWS_DYNAMO_DB_READ_CAPACITY_UNITS=5
+AWS_DYNAMO_DB_WRITE_CAPACITY_UNITS=5
 
 ENVIRONMENT=development
 
