Router handler for all subscriptions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "paths": {
+      "@api/*": [
+        "./src/context/*"
+      ],
       "@config/*": [
         "./src/configuration/*"
       ],
