--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ AWS_API_VERSION=2012-08-10
 
 AWS_DYNAMO_DB_READ_CAPACITY_UNITS=5
 AWS_DYNAMO_DB_WRITE_CAPACITY_UNITS=5
+AWS_DYNAMO_DB_LIMIT=10
 
 ENVIRONMENT=development
 
