Master key variable added to handle tables management operations

--- a/serverless.yml
+++ b/serverless.yml
@@ -25,6 +25,7 @@ provider:
     AWS_DYNAMO_DB_LIMIT: ${env:AWS_DYNAMO_DB_LIMIT}
 
     ENVIRONMENT: ${env:ENVIRONMENT}
+    MASTER_KEY: ${env:MASTER_KEY}
 
     CORS_ALLOW_ORIGIN: ${env:CORS_ALLOW_ORIGIN}
 
