--- a/src/context/v1/subscriptions/serverless.yml
+++ b/src/context/v1/subscriptions/serverless.yml
@@ -1,17 +1,39 @@
-getSubscriptions:
-  handler: dist/app.handler
-  name: ${self:service}-${self:provider.stage}-getSubscriptions
-  events:
-    - http:
-        path: api/v1/subscriptions/{uuid}
-        method: GET
-        cors: true
-
 addSubscription:
   handler: dist/app.handler
   name: ${self:service}-${self:provider.stage}-addSubscription
   events:
     - http:
         path: api/v1/subscriptions
+        method: POST
+        cors: true
+
+downTableSubscription:
+  handler: dist/app.handler
+  name: ${self:service}-${self:provider.stage}-downTableSubscription
+  events:
+    - http:
+        path: api/v1/subscriptions/down
+        method: POST
+        cors: true
+
+getSubscriptions:
+  handler: dist/app.handler
+  name: ${self:service}-${self:provider.stage}-getSubscriptions
+  events:
+    - http:
+        path: api/v1/subscriptions
+        method: GET
+        cors: true
+    - http:
+        path: api/v1/subscriptions/{uuid}
+        method: GET
+        cors: true
+
+upTableSubscription:
+  handler: dist/app.handler
+  name: ${self:service}-${self:provider.stage}-upTableSubscription
+  events:
+    - http:
+        path: api/v1/subscriptions/up
         method: POST
         cors: true
