Added handler for updating existing items

--- a/src/context/v1/subscriptions/serverless.yml
+++ b/src/context/v1/subscriptions/serverless.yml
@@ -37,3 +37,12 @@ upTableSubscription:
         path: api/v1/subscriptions/up
         method: POST
         cors: true
+
+updateSubscription:
+  handler: dist/app.handler
+  name: ${self:service}-${self:provider.stage}-updateSubscription
+  events:
+    - http:
+        path: api/v1/subscriptions
+        method: PUT
+        cors: true
