--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "audit:dependencies": "yarn audit",
     "build": "tsc -pretty -p .",
     "deploy": "npm run build && sls deploy --force",
-    "start:offline": "npm run build && serverless offline start",
+    "start:cleaning": "rm -rf ./dist",
+    "start:offline": "npm run start:cleaning && npm run build && serverless offline start",
     "start:debug": "npm run build && SLS_DEBUG=* node --inspect ./node_modules/.bin/serverless offline -s dev",
     "test": "clear && npm run test:tslint && npm run test:mdlint",
     "test:tslint": "tslint --project tsconfig.json",
