--- a/src/context/v1/user-groups/serverless.yml
+++ b/src/context/v1/user-groups/serverless.yml
@@ -1,3 +1,12 @@
+downTableUserGroup:
+  handler: dist/app.handler
+  name: ${self:service}-${self:provider.stage}-downTableUserGroup
+  events:
+    - http:
+        path: api/v1/user-groups/down
+        method: POST
+        cors: true
+
 getUserGroup:
   handler: dist/app.handler
   name: ${self:service}-${self:provider.stage}-getUserGroup
@@ -5,4 +14,13 @@ getUserGroup:
     - http:
         path: api/v1/user-groups/{proxy+}
         method: GET
+        cors: true
+
+upTableUserGroup:
+  handler: dist/app.handler
+  name: ${self:service}-${self:provider.stage}-upTableUserGroup
+  events:
+    - http:
+        path: api/v1/user-groups/up
+        method: POST
         cors: true
