--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# macOS related files & folders
+.DS_STORE
+
 # Runtime data
 pids
 *.pid
@@ -66,5 +69,9 @@ typings/
 # lock files
 package-lock.json
 
-# dist folder
+# build & dist folder
 dist/
+.build/
+
+# serverless folder
+.serverless/
