Updating npm scripts

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "audit:dependencies": "yarn audit",
     "build": "npm run start:clear:dist && tsc -pretty -p .",
+    "postpublish": "npm run start:clear:dist && npm run start:clear:serverless",
     "prepublish": "npm run build",
     "prestart": "npm run start:clear:build",
     "publish":  "sls deploy --force",
     "start": "serverless offline start",
     "start:clear:build": "rm -rf .build/",
     "start:clear:dist": "rm -rf ./dist",
+    "start:clear:serverless": "rm -rf .serverless/",
     "start:debug": "SLS_DEBUG=* node --inspect ./node_modules/.bin/serverless offline -s dev",
     "test": "clear && npm run test:tslint && npm run test:mdlint",
     "test:tslint": "tslint --project tsconfig.json",
