Added server typescript plugin (#27)
* Added server typescript plugin

* Updating npm scripts

* Added serverless framework badge

--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "src/app.js",
   "scripts": {
     "audit:dependencies": "yarn audit",
-    "build": "npm run start:cleaning && tsc -pretty -p .",
-    "deploy": "npm run build && sls deploy --force",
-    "start:cleaning": "rm -rf ./dist",
-    "start:offline": "npm run build && serverless offline start",
-    "start:debug": "npm run build && SLS_DEBUG=* node --inspect ./node_modules/.bin/serverless offline -s dev",
+    "build": "npm run start:clear:dist && tsc -pretty -p .",
+    "postpublish": "npm run start:clear:dist && npm run start:clear:serverless",
+    "prepublish": "npm run build",
+    "prestart": "npm run start:clear:build",
+    "publish":  "sls deploy --force",
+    "start": "serverless offline start",
+    "start:clear:build": "rm -rf .build/",
+    "start:clear:dist": "rm -rf ./dist",
+    "start:clear:serverless": "rm -rf .serverless/",
+    "start:debug": "SLS_DEBUG=* node --inspect ./node_modules/.bin/serverless offline -s dev",
     "test": "clear && npm run test:tslint && npm run test:mdlint",
     "test:tslint": "tslint --project tsconfig.json",
     "test:mdlint": "./node_modules/.bin/remark . .github/"
@@ -55,6 +60,7 @@
     "remark-preset-lint-recommended": "^3.0.2",
     "serverless-dotenv-plugin": "^2.0.1",
     "serverless-offline": "^4.4.2",
+    "serverless-plugin-typescript": "^1.1.5",
     "source-map-support": "^0.5.10",
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
