--- a/src/context/v1/user-groups/serverless.yml
+++ b/src/context/v1/user-groups/serverless.yml
@@ -1,5 +1,5 @@
 downTableUserGroup:
-  handler: dist/app.handler
+  handler: src/app.handler
   name: ${self:service}-${self:provider.stage}-downTableUserGroup
   events:
     - http:
@@ -8,7 +8,7 @@ downTableUserGroup:
         cors: true
 
 getUserGroupByUuid:
-  handler: dist/app.handler
+  handler: src/app.handler
   name: ${self:service}-${self:provider.stage}-getUserGroupByUuid
   events:
     - http:
@@ -17,7 +17,7 @@ getUserGroupByUuid:
         cors: true
 
 getUserGroups:
-  handler: dist/app.handler
+  handler: src/app.handler
   name: ${self:service}-${self:provider.stage}-getUserGroups
   events:
     - http:
@@ -26,7 +26,7 @@ getUserGroups:
         cors: true
 
 getUserGroupsNextPage:
-  handler: dist/app.handler
+  handler: src/app.handler
   name: ${self:service}-${self:provider.stage}-getUserGroupsNextPage
   events:
     - http:
@@ -35,7 +35,7 @@ getUserGroupsNextPage:
         cors: true
 
 putUserGroup:
-  handler: dist/app.handler
+  handler: src/app.handler
   name: ${self:service}-${self:provider.stage}-putUserGroup
   events:
     - http:
@@ -53,7 +53,7 @@ updateUserGroup:
         cors: true
 
 upTableUserGroup:
-  handler: dist/app.handler
+  handler: src/app.handler
   name: ${self:service}-${self:provider.stage}-upTableUserGroup
   events:
     - http:
