[SE-49] Lambda Transcoding Job (#29)
* Changes on scripts, env vars & serverless config

* MediaConvert video encode job handler

* Updating lint rules

* Ignoring max-line-length

* Fixing dependencies

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,13 @@ AWS_API_VERSION=2012-08-10
 
 AWS_DYNAMO_DB_READ_CAPACITY_UNITS=5
 AWS_DYNAMO_DB_WRITE_CAPACITY_UNITS=5
-AWS_DYNAMO_DB_LIMIT=10
+AWS_DYNAMO_DB_LIMIT=7
+
+AWS_MEDIA_CONVERT_API_VERSION=2017-08-29
+AWS_MEDIA_CONVERT_ENDPOINT=
+AWS_MEDIA_CONVERT_JOB_TEMPLATE=System-Ott_Hls_Ts_Avc_Aac
+AWS_MEDIA_CONVERT_OUTPUT_BUCKET=video-output
+AWS_MEDIA_CONVERT_ROLE=MediaConvertRole
 
 ENVIRONMENT=development
 MASTER_KEY=
