--- a/src/context/v1/media-services/serverless.yml
+++ b/src/context/v1/media-services/serverless.yml
@@ -5,3 +5,9 @@ encodeVideo:
     - s3:
         bucket: ${env:SERVERLESS_NAME}-${env:AWS_ACCOUNT_ID}-${self:provider.stage}-video-input
         event: s3:ObjectCreated:*
+
+notify:
+  handler: src/app.notify
+  name: ${self:service}-${self:provider.stage}-notify
+  events:
+    - sns: arn:aws:sns:${env:AWS_REGION_CODE}:${env:AWS_ACCOUNT_ID}:${self:provider.stage}-notify
