Updating ES6 syntax

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
-    "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
     "isolatedModules": false,
     "lib": ["es2018", "dom"],
     "module": "commonjs",
