Updating env files

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,13 @@ AWS_DYNAMO_DB_LIMIT=7
 AWS_MEDIA_CONVERT_API_VERSION=2017-08-29
 AWS_MEDIA_CONVERT_ENDPOINT=
 AWS_MEDIA_CONVERT_JOB_TEMPLATE=System-Ott_Dash_Mp4_Avc_Aac
+AWS_MEDIA_CONVERT_INPUT_BUCKET=video-input
 AWS_MEDIA_CONVERT_OUTPUT_BUCKET=video-output
 AWS_MEDIA_CONVERT_ROLE=MediaConvertRole
+
+VIDEO_MAX_FIELDS=0
+VIDEO_MAX_FILE_SIZE=768000000
+VIDEO_MAX_FILES=1
 
 ENVIRONMENT=development
 MASTER_KEY=
