--- a/serverless.yml
+++ b/serverless.yml
@@ -28,8 +28,13 @@ provider:
     AWS_MEDIA_CONVERT_API_VERSION: ${env:AWS_MEDIA_CONVERT_API_VERSION}
     AWS_MEDIA_CONVERT_ENDPOINT: ${env:AWS_MEDIA_CONVERT_ENDPOINT}
     AWS_MEDIA_CONVERT_JOB_TEMPLATE: ${env:AWS_MEDIA_CONVERT_JOB_TEMPLATE}
+    AWS_MEDIA_CONVERT_INPUT_BUCKET: ${env:AWS_MEDIA_CONVERT_INPUT_BUCKET}
     AWS_MEDIA_CONVERT_OUTPUT_BUCKET: ${env:AWS_MEDIA_CONVERT_OUTPUT_BUCKET}
     AWS_MEDIA_CONVERT_ROLE: ${env:AWS_MEDIA_CONVERT_ROLE}
+
+    VIDEO_MAX_FIELDS: ${env:VIDEO_MAX_FIELDS}
+    VIDEO_MAX_FILE_SIZE: ${env:VIDEO_MAX_FILE_SIZE}
+    VIDEO_MAX_FILES: ${env:VIDEO_MAX_FILES}
 
     ENVIRONMENT: ${env:ENVIRONMENT}
     MASTER_KEY: ${env:MASTER_KEY}
