Several changes to file upload

--- a/src/context/v1/videos/serverless.yml
+++ b/src/context/v1/videos/serverless.yml
@@ -9,7 +9,7 @@ downTableVideo:
 
 getVideoByUuid:
   handler: src/app.handler
-  name: ${self:service}-${self:provider.stage}-getSubscriptionByUuid
+  name: ${self:service}-${self:provider.stage}-getVideoByUuid
   events:
     - http:
         path: api/v1/videos/{uuid}
@@ -23,6 +23,15 @@ getVideos:
     - http:
         path: api/v1/videos
         method: GET
+        cors: true
+
+uploadVideo:
+  handler: src/app.handler
+  name: ${self:service}-${self:provider.stage}-uploadVideo
+  events:
+    - http:
+        path: api/v1/videos
+        method: POST
         cors: true
 
 upTableVideo:
