Environment variables for s3 public upload

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ AWS_MEDIA_CONVERT_INPUT_BUCKET=video-input
 AWS_MEDIA_CONVERT_OUTPUT_BUCKET=video-output
 AWS_MEDIA_CONVERT_ROLE=MediaConvertRole
 
+AWS_S3_KEY=
+AWS_S3_SECRET=
+
 VIDEO_MAX_FIELDS=0
 VIDEO_MAX_FILE_SIZE=768000000
 VIDEO_MAX_FILES=1
