Implementing use of s3 env variables

--- a/serverless.yml
+++ b/serverless.yml
@@ -32,6 +32,9 @@ provider:
     AWS_MEDIA_CONVERT_OUTPUT_BUCKET: ${env:AWS_MEDIA_CONVERT_OUTPUT_BUCKET}
     AWS_MEDIA_CONVERT_ROLE: ${env:AWS_MEDIA_CONVERT_ROLE}
 
+    AWS_S3_KEY: ${env:AWS_S3_KEY}
+    AWS_S3_SECRET: ${env:AWS_S3_SECRET}
+
     VIDEO_MAX_FIELDS: ${env:VIDEO_MAX_FIELDS}
     VIDEO_MAX_FILE_SIZE: ${env:VIDEO_MAX_FILE_SIZE}
     VIDEO_MAX_FILES: ${env:VIDEO_MAX_FILES}
