[SE-61] Create POST Method to Upload New Videos (#35)
* multer middleware for multipart uploads

* Updating env files

* Several changes to file upload

* Removing unused packages

* Helper for returning file name without extension

* Updating models

* Updating upload instructions

* Refactoring uuid

* Refactoring handler

* Environment variables for s3 public upload

* Implementing use of s3 env variables

* Conflict between routes

* Ternary for handling existing videos

--- a/src/context/v1/videos/serverless.yml
+++ b/src/context/v1/videos/serverless.yml
@@ -7,9 +7,18 @@ downTableVideo:
         method: POST
         cors: true
 
+getSignedUrl:
+  handler: src/app.handler
+  name: ${self:service}-${self:provider.stage}-getSignedUrl
+  events:
+    - http:
+        path: api/v1/videos/sign
+        method: POST
+        cors: true
+
 getVideoByUuid:
   handler: src/app.handler
-  name: ${self:service}-${self:provider.stage}-getSubscriptionByUuid
+  name: ${self:service}-${self:provider.stage}-getVideoByUuid
   events:
     - http:
         path: api/v1/videos/{uuid}
